# VulcanVision

./: README.md  pyproject.toml  sujet.txt
analyse_sujet/: 1.md  2.md  3.md  4.md
analysis/: readme.md
notebooks/: baseline_unet3d.ipynb
outputs/: 1407735.tif
scripts/: explore_dataset.py
